<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="connection_will_be_refreshed">Connection will be refreshed after 10 seconds</string>
    <string name="restart_app">Please, restart app for updating data of fall detection</string>
    <string name="fall_detect">Fall detection:</string>
    <string name="dialod_title">Calibration Mode</string>
    <string name="dialod_calibration_success">Congratulation! Calibration is finished.</string>
    <string name="dialog_message_1">Please put the insoles flat on the floor, then press start</string>
    <string name="dialog_message_2">Turn the insoles on the backside flat on the floor, then press start</string>
    <string name="dialog_message_3">Please put the insoles at the wall, toe to the top, then press start</string>
    <string name="dialog_message_4">Please put the insoles at the wall, toe to the bottom, then press start</string>
    <string name="dialog_message_5">Please put the insoles at the wall, put on the left side, then press start</string>
    <string name="dialog_message_6">Please put the insoles at the wall, put on  the right side, then press start</string>
    <string name="calibration_mode_will_be_started">Calibration will be started after 10 seconds</string>
    <string name="auto_connection_started">Auto connection started</string>
    <string name="app_name">WIISEL</string>
    <string name="action_settings">Settings</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="sign_in_login_screen">Sign In</string>
    <string name="insole_r">Right Insole</string>
    <string name="insole_l">Left Insole</string>
    <string name="server">Server</string>
    <string name="device">Device</string>
    <string name="state">State</string>
    <string name="signal">Signal</string>
    <string name="charge">Charge</string>
    <string name="connect">Connect"</string>
    <string name="disconnect">Disconnect</string>
    <string name="calibrate">Calibrate</string>
    <string name="cancel">Cancel</string>
    <string name="image">image</string>
    <string name="timer">Timer</string>
    <string name="first_insole">Right insole</string>
    <string name="second_insole">Left insole</string>
    <string name="num_of_st">Number of steps</string>
    <string name="active_time">Active time</string>
    <string name="walk_dist">Walking distance</string>
    <string name="start_auto">Start automatically: </string>
    <string name="serverip">Server\&apos;s IP:</string>
    <string name="accelerometer_sensitivity">Fall detection sensitivity:</string>
    <string name="auto_auth">Automatic login: </string>
    <string name="auto_connection">Auto connection: </string>
    <string name="warning">Warning! </string>
    <string name="fall_has_been_detected">Fall has been detected! \nEmergency message will be\nsent in 30 sec </string>
    <string name="i_am_ok">This is no fall. I am OK!</string>
    <string name="save_button">Save </string>
    <string name="details_button">Details </string>
    <string name="log_out_button">Log out</string>
    <string name="i_fall">I fell over!</string>
    <string name="description">image</string>
    <string name="clip_mode">Clip Mode is ON</string>
    <string name="general_mode">General Mode is ON</string>
    <string name="x">X: </string>
    <string name="y">Y: </string>
    <string name="z">Z: </string>
    <string name="gyroscope">Gyroscope\n(MPU6500)</string>
    <string name="accelerometer_mpu">Accelerometer\n(MPU6500)</string>
    <string name="accelerometer_lis">Accelerometer\n(LIS3DH)</string>
    <string name="pressure">Pressure</string>
    <string name="press0">[0]: </string>
    <string name="press1">[1]: </string>
    <string name="press2">[2]: </string>
    <string name="press3">[3]: </string>
    <string name="press4">[4]: </string>
    <string name="press5">[5]: </string>
    <string name="press6">[6]: </string>
    <string name="press7">[7]: </string>
    <string name="press8">[8]: </string>
    <string name="press9">[9]: </string>
    <string name="press10">[10]: </string>
    <string name="press11">[11]: </string>
    <string name="press12">[12]: </string>
    <string name="press13">[13]: </string>
    <string name="succ_sync_complete">Everything is working fine</string>
    <string name="exit_title">Exit</string>
    <string name="exit_mess">Are you sure you want to close this application?\nAfter closing, the data will be sent to the server</string>
	<string name="previous_day">Activity of previous day</string>
	<string name="connecting_insoles">Do you want to connect to insoles?</string>
	<string name="disconnecting_insoles">Dou you want to disconnect from insoles?</string>
	<string name="ic_settings">Settings</string>
	<string name="mess_fill_fields">Please, fill all fields</string>
	<string name="mess_wait">Please, wait...</string>
	<string name="mess_nointernet">No internet connection. The files will set to queue.</string>
	<string name="mess_receiving_act">Receiving data activated</string>
	<string name="start">Start</string>
	<string name="mess_ble_notav">BLE is not available</string>
	<string name="mess_bt_notav">Bluetooth is not available</string>
	<string name="mess_bt_on">Bluetooth on</string>
	<string name="mess_bt_off">Bluetooth NOT on</string>
	<string name="mess_bind_ok">%s - success</string>
	<string name="mess_bind_failed">Bind to %s failed</string>
	<string name="mess_closing">App Closing</string>
	<string name="mess_sync_tries">Unable to sync after %d tries</string>
	<string name="mess_pleasereconnect">Please, authorize in the app one more time</string>
	<string name="mess_patientfall">Notification about a patients fall: Patient %1$s fell over at %2$s</string>
	<string name="mess_datawassaved">Data was saved.</string>
	<string name="mess_alertdoesnotsent">Alert notification does not send. Server not respond.</string>
	<string name="mess_checkinternet">Please, check your internet connection or your settings.</string>
	<string name="mess_falldetactivated">Fall detection activated</string>
	<string name="refresh_ud">Refresh UD</string>
	<string name="calibration">Calibration</string>
	<string name="deff_opt">Use default options</string>
	<string name="showlogger">Show logger:</string>
	
</resources>