<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_title_grey" >

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_warning_screen_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_devider_dialog"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_dialog_title"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:orientation="horizontal" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_dialog_signal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_devider_dialog"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_dialog_signal_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:paddingTop="5dp"
            android:text="@string/signal"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/iv_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/description" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_dialog_signal"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/btn_dialog_connect_disconect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/connect" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>