<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/rl_header_login_screen"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_login_screen"
        android:background="@color/header_login_screen" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_text_header_login_screen"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_app_name"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rl_header_login_screen"
        android:padding="@dimen/login_screen_padding" >

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_email_login_screen_top_margin"
            android:paddingBottom="@dimen/login_padding_text"
            android:paddingTop="@dimen/login_padding_text"
            android:text="@string/text_email"
            android:textSize="@dimen/tv_email_password_text_size_login" />

        <EditText
            android:id="@+id/et_email_input"
            android:layout_width="@dimen/et_wight_login_screen"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email_input"
            android:paddingBottom="@dimen/login_padding_text"
            android:paddingTop="@dimen/login_padding_text"
            android:text="@string/text_password"
            android:textSize="@dimen/tv_email_password_text_size_login" />

        <EditText
            android:id="@+id/et_password_input"
            android:layout_width="@dimen/et_wight_login_screen"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_password_input"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_sign_on_login"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/et_password_input"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/tv_email_login_screen_top_margin"
            android:text="@string/sign_in_login_screen" />

<!--         <ImageView -->
<!--             android:id="@+id/btn_log_sett" -->
<!--             android:layout_width="50dp" -->
<!--             android:layout_height="50dp" -->
<!--             android:layout_alignParentBottom="true" -->
<!--             android:layout_alignParentRight="true" -->
<!--             android:contentDescription="@string/description" -->
<!--             android:src="@drawable/settings" /> -->
    </RelativeLayout>

</RelativeLayout>